--- a/assets/pages/tienda.html
+++ b/assets/pages/tienda.html
@@ -22,15 +22,35 @@
         </div>
     </nav>
 
-    <header class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <h1>Descubrí el mundo del té</h1>
-                <p>Una experiencia de aroma y sabor directo a tu taza.</p>
-                <a href="tienda.html" class="btn">Ver variedades</a>
+   <section class="carousel">
+    <div class="carousel-container">
+        <div class="carousel-slide active">
+            <img src="img/te1.jpg" alt="Té verde">
+            <div class="carousel-text">
+                <h2>Té Verde</h2>
+                <p>Refrescante y antioxidante, ideal para tu día a día.</p>
             </div>
         </div>
-    </header>
+        <div class="carousel-slide">
+            <img src="img/te2.jpg" alt="Té negro">
+            <div class="carousel-text">
+                <h2>Té Negro</h2>
+                <p>Intenso y lleno de sabor, una infusión clásica.</p>
+            </div>
+        </div>
+        <div class="carousel-slide">
+            <img src="img/te3.jpg" alt="Té chai">
+            <div class="carousel-text">
+                <h2>Té Chai</h2>
+                <p>Exótico y especiado, perfecto para una tarde relajada.</p>
+            </div>
+        </div>
+
+        <button class="carousel-btn prev">&#10094;</button>
+        <button class="carousel-btn next">&#10095;</button>
+    </div>
+</section>
+
 
     <footer class="footer">
         <div class="container">
