--- a/assets/index.html
+++ b/assets/index.html
@@ -12,34 +12,33 @@
     <div id="header-placeholder"></div>
 
     <!-- Contenido principal de la página -->
-       <section class="carousel">
-        <div class="carousel-container">
-            <div class="carousel-slide active">
-                <img src="images/te verde.jpg" alt="Té verde">
-                <div class="carousel-text">
-                    <h2>Té Verde</h2>
-                    <p>Refrescante y antioxidante, ideal para tu día a día.</p>
-                </div>
-            </div>
-            <div class="carousel-slide">
-                <img src="images/te negro.jpg" alt="Té negro">
-                <div class="carousel-text">
-                    <h2>Té Negro</h2>
-                    <p>Intenso y lleno de sabor, una infusión clásica.</p>
-                </div>
-            </div>
-            <div class="carousel-slide">
-                <img src="images/te chai.jpg" alt="Té chai">
-                <div class="carousel-text">
-                    <h2>Té Chai</h2>
-                    <p>Exótico y especiado, perfecto para una tarde relajada.</p>
-                </div>
-            </div>
+ <section class="carousel">
+  <div class="carousel-slide active">
+    <img src="images/taza de te.jpg" alt="Té verde" />
+    <div class="carousel-text">
+      <h2>Té Verde</h2>
+      <p>Refrescante y antioxidante, ideal para tu día a día.</p>
+    </div>
+  </div>
+  <div class="carousel-slide">
+    <img src="images/te negro.jpg" alt="Té negro" />
+    <div class="carousel-text">
+      <h2>Té Negro</h2>
+      <p>Intenso y lleno de sabor, una infusión clásica.</p>
+    </div>
+  </div>
+  <div class="carousel-slide">
+    <img src="images/te chai.jpg" alt="Té chai" />
+    <div class="carousel-text">
+      <h2>Té Chai</h2>
+      <p>Exótico y especiado, perfecto para una tarde relajada.</p>
+    </div>
+  </div>
 
-            <button class="carousel-btn prev">&#10094;</button>
-            <button class="carousel-btn next">&#10095;</button>
-        </div>
-    </section>
+  <button class="carousel-btn prev">&#10094;</button>
+  <button class="carousel-btn next">&#10095;</button>
+</section>
+
 
     <!-- Aquí se carga el footer desde templates/footer.html -->
     <div id="footer-placeholder"></div>
