--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -1,41 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tienda de Té</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contacto - Tienda de Té</title>
+  <link rel="stylesheet" href="../styles/styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container nav-container">
-            <div class="logo">Tienda de Té</div>
-            <ul class="nav-links">
-                <li><a href="tienda.html">Nuestro Té</a></li>
-                <li><a href="tutoriales.html">Tutoriales</a></li>
-                <li><a href="menu-tienda.html">Nuestro Menú</a></li>
-                <li><a href="trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
-                <li><a href="franquicias.html">Franquicias</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </div>
-    </nav>
+  <!-- HEADER dinámico -->
+  <div id="header-placeholder"></div>
 
-    <header class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <h1>Descubrí el mundo del té</h1>
-                <p>Una experiencia de aroma y sabor directo a tu taza.</p>
-                <a href="tienda.html" class="btn">Ver variedades</a>
-            </div>
-        </div>
-    </header>
+  <main class="container">
+    <h1>Contacto</h1>
+    <p>Escribinos a través del siguiente formulario.</p>
+  </main>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Tienda de Té. Todos los derechos reservados.</p>
-        </div>
-    </footer>
+  <!-- FOOTER dinámico -->
+  <div id="footer-placeholder"></div>
+
+  <script src="../scripts/main.js"></script>
 </body>
 </html>
