--- a/assets/pages/menu-tienda.html
+++ b/assets/pages/menu-tienda.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda de Té</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="../styles/menu-tienda.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
@@ -32,10 +33,84 @@
         </div>
     </header>
 
+    <main>
+    <section class="gallery-section">
+        <div class="container">
+            <h2>Nuestras opciones gastronomicas</h2>
+            <div class="gallery-grid">
+                <div class="gallery-item with-text">
+                    <img src="../images/menu-tienda/img-menu1.jpg" alt="">
+                    <div class="overlay">
+                        <h3>Café helado</h3>
+                        <p>café helado con acompañamiento dulce</p>
+                    </div>
+                </div>
+
+                <div class="gallery-item with-text">
+                    <img src="../images/menu-tienda/img-menu2.jpg" alt="">
+                    <div class="overlay">
+                        <h3>Café helado</h3>
+                        <p>Café helado con acompañamiento salado</p>
+                    </div>
+                </div>
+
+                <div class="gallery-item with-text">
+                    <img src="../images/menu-tienda/img-menu3.jpg" alt="">
+                    <div class="overlay">
+                        <h3>Torta Marquise</h3>
+                    </div>
+                </div>
+
+                <div class="gallery-item with-text">
+                    <img src="../images/menu-tienda/img-menu4.jpg" alt="">
+                    <div class="overlay">
+                        <h3>Té Negro Clásico</h3>
+                        <p>Intenso y aromático, ideal para empezar el día.</p>
+                    </div>
+                </div>
+
+                <div class="gallery-item with-text">
+                    <img src="../images/menu-tienda/img-menu7.jpg" alt="">
+                    <div class="overlay">
+                        <h3>Nuestra nueva cookie</h3>
+                        <p>Probá nuestra nueva cookie de pistacho y frambuesa</p>
+                    </div>
+                </div>
+
+                <div class="gallery-item with-text">
+                    <img src="../images/menu-tienda/img-menu6.jpg" alt="">
+                    <div class="overlay">
+                        <h3>Cookies</h3>
+                        <p>todas nuestras variedades de cookies</p>
+                    </div>
+                </div>
+
+                 <div class="gallery-item with-text">
+                    <img src="../images/menu-tienda/img-menu8.jpg" alt="">
+                    <div class="overlay">
+                        <h3>Scon con jamon y queso</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
+
+    <section class="menu-download-section">
+         <div class="container">
+          <h2>Conocé Nuestro Menú Completo</h2>
+          <p>Hacé click para descargar nuestro menú detallado y descubrir todas nuestras variedades.</p>
+          <a href="../images/menu-tienda/menu.pdf" download class="menu-pdf-link">
+              <img src="../images/menu-tienda/menu-img.jpg" 
+                 alt="Descargar Menú de Té en PDF" 
+                 class="menu-pdf-image">
+        </a>
+        </div>
+    </section>
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 Tienda de Té. Todos los derechos reservados.</p>
         </div>
     </footer>
-</body>
+ </body>
 </html>
