Incluir placeholder para footer en franquicias.html

--- a/assets/pages/franquicias.html
+++ b/assets/pages/franquicias.html
@@ -79,11 +79,10 @@
         </section>
     </main>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Tienda de Té. Todos los derechos reservados.</p>
-        </div>
-    </footer>
+    <!-- Carga el footer desde templates/footer.html -->
+    <div id="footer-placeholder"></div>
+    <!-- Carga del JavaScript principal -->
+    <script src="../scripts/main.js"></script>
 </body>
 </html>
 
