se corrigen rutas y templates

--- a/assets/pages/menu-tienda.html
+++ b/assets/pages/menu-tienda.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar">
+   <!-- <nav class="navbar">
         <div class="container nav-container">
             <div class="logo">Tienda de Té</div>
             <ul class="nav-links">
@@ -21,8 +21,9 @@
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </div>
-    </nav>
+    </nav> -->
 
+    <div id="header-placeholder"></div>
     <header class="hero">
         <div class="container">
             <div class="hero-content">
@@ -107,10 +108,9 @@
         </a>
         </div>
     </section>
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Tienda de Té. Todos los derechos reservados.</p>
-        </div>
-    </footer>
+    <!-- Carga el footer desde templates/footer.html -->
+    <div id="footer-placeholder"></div>
+    <!-- Carga del JavaScript principal -->
+    <script src="../scripts/main.js"></script>
  </body>
 </html>
