--- a/assets/pages/franquicias.html
+++ b/assets/pages/franquicias.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav class="navbar">
+   <!-- <nav class="navbar">
         <div class="container nav-container">
             <div class="logo">Tienda de Té</div>
             <ul class="nav-links">
@@ -23,6 +23,8 @@
             </ul>
         </div>
     </nav>
+    -->
+    <div id="header-placeholder"></div>
 
     <header class="franquicias-intro">
         <div class="container">
