--- a/assets/pages/tienda.html
+++ b/assets/pages/tienda.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar">
+<!--    <nav class="navbar">
         <div class="container nav-container">
             <div class="logo">Tienda de Té</div>
             <ul class="nav-links">
@@ -22,6 +22,8 @@
             </ul>
         </div>
     </nav>
+    -->
+    <div id="header-placeholder"></div>
 
      <main class="main-content">
         <div class="container">
@@ -85,13 +87,11 @@
         </div>
     </main>
 
+    <!-- Carga el footer desde templates/footer.html -->
+    <div id="footer-placeholder"></div>
+    <!-- Carga del JavaScript principal -->
+    <script src="../scripts/main.js"></script>
 
 
-
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Tienda de Té. Todos los derechos reservados.</p>
-        </div>
-    </footer>
 </body>
 </html>
