--- a/assets/pages/tutoriales.html
+++ b/assets/pages/tutoriales.html
@@ -1,41 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tienda de Té</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Tutoriales | Tienda de Té</title>
+  <link rel="stylesheet" href="../styles/styles.css" />
+  <link rel="stylesheet" href="../styles/tutoriales.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container nav-container">
-            <div class="logo">Tienda de Té</div>
-            <ul class="nav-links">
-                <li><a href="tienda.html">Nuestro Té</a></li>
-                <li><a href="tutoriales.html">Tutoriales</a></li>
-                <li><a href="menu-tienda.html">Nuestro Menú</a></li>
-                <li><a href="trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
-                <li><a href="franquicias.html">Franquicias</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </div>
-    </nav>
+  <div id="header-placeholder"></div>
 
-    <header class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <h1>Descubrí el mundo del té</h1>
-                <p>Una experiencia de aroma y sabor directo a tu taza.</p>
-                <a href="tienda.html" class="btn">Ver variedades</a>
-            </div>
-        </div>
-    </header>
+  <main class="tutoriales-container">
+    <h1 class="titulo-principal">Tutoriales para disfrutar el Té</h1>
+    <p class="descripcion-principal">
+      Aprende cómo preparar y apreciar el té perfecto, descubre sus propiedades únicas y explora variedades que harán que cada sorbo sea especial.
+    </p>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Tienda de Té. Todos los derechos reservados.</p>
-        </div>
-    </footer>
+    <section class="videos-tutoriales">
+      <article class="video-card">
+        <iframe
+          src="https://www.youtube.com/embed/ID_DE_TU_VIDEO_1"
+          title="Cómo preparar té verde"
+          frameborder="0"
+          allowfullscreen
+          loading="lazy"
+        ></iframe>
+        <h3>Cómo preparar té verde</h3>
+      </article>
+
+      <article class="video-card">
+        <iframe
+          src="https://www.youtube.com/embed/ID_DE_TU_VIDEO_2"
+          title="Propiedades del té negro"
+          frameborder="0"
+          allowfullscreen
+          loading="lazy"
+        ></iframe>
+        <h3>Propiedades del té negro</h3>
+      </article>
+
+      <article class="video-card">
+        <iframe
+          src="https://www.youtube.com/embed/ID_DE_TU_VIDEO_3"
+          title="Infusiones creativas con té chai"
+          frameborder="0"
+          allowfullscreen
+          loading="lazy"
+        ></iframe>
+        <h3>Infusiones creativas con té chai</h3>
+      </article>
+    </section>
+
+    <section class="galeria-te">
+      <h2 class="titulo-galeria">Descubrí nuestros sabores</h2>
+      <div class="imagenes-scroll">
+        <img src="../images/te-verde.jpg" alt="Té Verde" />
+        <img src="../images/te-rojo.jpg" alt="Té Rojo" />
+        <img src="../images/te-chai.jpg" alt="Té Chai" />
+        <img src="../images/te-blanco.jpg" alt="Té Blanco" />
+        <img src="../images/te-floral.jpg" alt="Té Floral" />
+      </div>
+    </section>
+  </main>
+
+  <div id="footer-placeholder"></div>
+  <script src="../scripts/main.js"></script>
 </body>
 </html>
