imagenes tutoriales y enlaces

--- a/assets/pages/tutoriales.html
+++ b/assets/pages/tutoriales.html
@@ -19,35 +19,17 @@
 
     <section class="videos-tutoriales">
       <article class="video-card">
-        <iframe
-          src="https://www.youtube.com/embed/ID_DE_TU_VIDEO_1"
-          title="Cómo preparar té verde"
-          frameborder="0"
-          allowfullscreen
-          loading="lazy"
-        ></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/pKL4cCtcAWM?si=tMQJVEwDvN_-r6bg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <h3>Cómo preparar té verde</h3>
       </article>
 
       <article class="video-card">
-        <iframe
-          src="https://www.youtube.com/embed/ID_DE_TU_VIDEO_2"
-          title="Propiedades del té negro"
-          frameborder="0"
-          allowfullscreen
-          loading="lazy"
-        ></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/FjTRFIEc6uc?si=cehs5iHxgZVNCfut" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <h3>Propiedades del té negro</h3>
       </article>
 
       <article class="video-card">
-        <iframe
-          src="https://www.youtube.com/embed/ID_DE_TU_VIDEO_3"
-          title="Infusiones creativas con té chai"
-          frameborder="0"
-          allowfullscreen
-          loading="lazy"
-        ></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/v6120GamXOM?si=S8DxKpU5R3K3zVVQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <h3>Infusiones creativas con té chai</h3>
       </article>
     </section>
@@ -55,11 +37,12 @@
     <section class="galeria-te">
       <h2 class="titulo-galeria">Descubrí nuestros sabores</h2>
       <div class="imagenes-scroll">
-        <img src="../images/te-verde.jpg" alt="Té Verde" />
-        <img src="../images/te-rojo.jpg" alt="Té Rojo" />
-        <img src="../images/te-chai.jpg" alt="Té Chai" />
-        <img src="../images/te-blanco.jpg" alt="Té Blanco" />
-        <img src="../images/te-floral.jpg" alt="Té Floral" />
+        <img src="../images/tutoriales/te1.jpg" alt="Té Verde" />
+        <img src="../images/tutoriales/te2.jpg" alt="Té Rojo" />
+        <img src="../images/tutoriales/te3.jpg" alt="Té Chai" />
+        <img src="../images/tutoriales/te4.jpg" alt="Té Blanco" />
+        <img src="../images/tutoriales/te5.jpg" alt="Té Floral" />
+        <img src="../images/tutoriales/te6.jpg" alt="Té Floral" />
       </div>
     </section>
   </main>
