union dev_contacto

--- a/assets/pages/tienda.html
+++ b/assets/pages/tienda.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,22 +9,11 @@
     <link rel="stylesheet" href="../styles/tienda.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
 </head>
-<body>
-    <nav class="navbar">
-        <div class="container nav-container">
-            <div class="logo">Tienda de Té</div>
-            <ul class="nav-links">
-                <li><a href="tienda.html">Nuestro Té</a></li>
-                <li><a href="tutoriales.html">Tutoriales</a></li>
-                <li><a href="menu-tienda.html">Nuestro Menú</a></li>
-                <li><a href="trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
-                <li><a href="franquicias.html">Franquicias</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </div>
-    </nav>
 
-     <main class="main-content">
+<body>
+    <div id="header-placeholder"></div>
+
+    <main class="main-content">
         <div class="container">
             <h1>Nuestros Productos </h1>
             <section class="product-grid">
@@ -85,13 +75,8 @@
         </div>
     </main>
 
-
-
-
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Tienda de Té. Todos los derechos reservados.</p>
-        </div>
-    </footer>
+    <div id="footer-placeholder"></div>
+    <script src="../scripts/main.js"></script>
 </body>
+
 </html>
