--- a/assets/pages/franquicias.html
+++ b/assets/pages/franquicias.html
@@ -10,19 +10,7 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="container nav-container">
-            <div class="logo">Tienda de Té</div>
-            <ul class="nav-links">
-                <li><a href="tienda.html">Nuestro Té</a></li>
-                <li><a href="tutoriales.html">Tutoriales</a></li>
-                <li><a href="menu-tienda.html">Nuestro Menú</a></li>
-                <li><a href="trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
-                <li><a href="franquicias.html">Franquicias</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </div>
-    </nav>
+   <div id="header-placeholder"></div>
 
     <header class="franquicias-intro">
         <div class="container">
