--- a/assets/pages/tutoriales.html
+++ b/assets/pages/tutoriales.html
@@ -9,7 +9,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <div id="header-placeholder"></div>
+  <nav class="navbar">
+    <div class="container nav-container">
+        <div class="logo">
+            <a href="../index.html" style="color: inherit; text-decoration: none;">Tienda de Té</a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="tienda.html">Nuestro Té</a></li>
+            <li><a href="tutoriales.html">Tutoriales</a></li>
+            <li><a href="menu-tienda.html">Nuestro Menú</a></li>
+            <li><a href="trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
+            <li><a href="franquicias.html">Franquicias</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+    </div>
+</nav>
 
   <main class="tutoriales-container">
     <h1 class="titulo-principal">Tutoriales para disfrutar el Té</h1>
@@ -47,7 +61,60 @@
     </section>
   </main>
 
-  <div id="footer-placeholder"></div>
+  
+<footer class="main-footer">
+    <div class="footer-container">
+        <div class="footer-column brand-info">
+            <h2>TIENDA DE TÉ</h2>
+        </div>
+
+        <div class="footer-column">
+            <h3>CONTENIDOS</h3>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="tienda.html">Nuestro Té</a></li>
+                <li><a href="menu-tienda.html">Nuestro menú</a></li>
+            </ul>
+        </div>
+        <!-- ver el nombre que quedó a trabaja con nosotros si es o no trabaja-en-tdc.html -->
+        <div class="footer-column">
+            <h3>¿NECESITAS AYUDA?</h3>
+            <ul>
+                <li><a href="tutoriales.html">Tutoriales</a></li>
+                <li><a href="trabaja-en-tdc.html">Trabajá con Nosotros</a></li>
+                <li><a href="franquicias.html">Franquicias</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-column subscribe-form">
+            <h3>¡SUSCRÍBETE PARA RECIBIR DESCUENTOS Y NOVEDADES EXCLUSIVAS!</h3>
+            <form>
+                <div class="form-group">
+                    <input type="text" id="subscribe-name" name="name" placeholder="Tu nombre" required>
+                </div>
+                <div class="form-group">
+                    <input type="email" id="subscribe-email" name="email" placeholder="Tu email" required>
+                </div>
+                <button type="submit" class="btn-subscribe">SUSCRIBIRME</button>
+            </form>
+            <div class="social-icons">
+                <h4>CONÉCTATE CON NOSOTROS</h4>
+                <a href="https://github.com/FabioNatanaelMora/Tienda-de-Te.git" class="social-icon"><img src="../images/logo/github.png" alt="github"></a>
+                
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-bottom">
+        <p>&copy; Copyright 2025 Tienda de Té. Todos los derechos reservados.</p>
+        <p>Todos los logos, productos, marcas y nombres aquí utilizados son propiedad registrada.</p>
+    </div>
+</footer>
+
+
+
+
   <script src="../scripts/main.js"></script>
 </body>
 </html>
