--- a/assets/index.html
+++ b/assets/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda de Té</title>
+    <link rel="icon" href="../assets/images/tienda.JPG" type="image/png">
     <link rel="stylesheet" href="styles/styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
 </head>
