--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda de Té</title>
     <link rel="icon" href="../assets/images/tienda.JPG" type="image/png">
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="assets/styles/styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
@@ -15,21 +15,21 @@
     <!-- Contenido principal de la página -->
  <section class="carousel">
   <div class="carousel-slide active">
-    <img src="images/taza de te.jpg" alt="Té verde" />
+    <img src="assets/images/te verde.jpg" alt="Té verde" />
     <div class="carousel-text">
       <h2>Té Verde</h2>
       <p>Refrescante y antioxidante, ideal para tu día a día.</p>
     </div>
   </div>
   <div class="carousel-slide">
-    <img src="images/te negro.jpg" alt="Té negro" />
+    <img src="assets/images/te negro.jpg" alt="Té negro" />
     <div class="carousel-text">
       <h2>Té Negro</h2>
       <p>Intenso y lleno de sabor, una infusión clásica.</p>
     </div>
   </div>
   <div class="carousel-slide">
-    <img src="images/te chai.jpg" alt="Té chai" />
+    <img src="assets/images/te chai.jpg" alt="Té chai" />
     <div class="carousel-text">
       <h2>Té Chai</h2>
       <p>Exótico y especiado, perfecto para una tarde relajada.</p>
@@ -45,6 +45,6 @@
     <div id="footer-placeholder"></div>
 
     <!-- Carga del JavaScript principal -->
-    <script src="scripts/main.js"></script>
+    <script src="assets/scripts/main.js"></script>
 </body>
 </html>
